[gd_scene load_steps=6 format=3 uid="uid://b0j00juowingy"]

[ext_resource type="PackedScene" uid="uid://idgnwwx64q64" path="res://card.glb" id="1_08ibv"]
[ext_resource type="Script" uid="uid://b5tduvdnrsovr" path="res://cards/rendering/card_3d.gd" id="1_m068u"]
[ext_resource type="PackedScene" uid="uid://cu5wllqoogum6" path="res://cards/rendering/unused/UNUSED_card_glow_particles_collection.tscn" id="3_v2fic"]

[sub_resource type="QuadMesh" id="QuadMesh_v2fic"]
size = Vector2(7.25, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_08ibv"]
size = Vector3(3.4, 0.011, 4.76)

[node name="Card3D" type="StaticBody3D"]
script = ExtResource("1_m068u")

[node name="Card3DModel" parent="." instance=ExtResource("1_08ibv")]
unique_name_in_owner = true

[node name="TransparentEffects" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, -0.005, 0)
cast_shadow = 0
mesh = SubResource("QuadMesh_v2fic")

[node name="MousePickingCollision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("BoxShape3D_08ibv")

[node name="CardGlowParticlesCollection" parent="." instance=ExtResource("3_v2fic")]
unique_name_in_owner = true
transform = Transform3D(4.75, 0, 0, 0, 4.75, 0, 0, 0, 4.75, 0, -0.005, 0)
visible = false

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
